spostato appendice in appendice :fire:

--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -1430,8 +1430,325 @@ Then the power output scenarios are obtained from these samples by following the
 
 \section{STRUCTURE PRESERVING CONTRAINT TRASFORMATIONS}\label{appendix B}
 
-Questa parte è la teoria sviluppata da Gabor. Non la metto nella mia tesi, la riserviamo per l'articolo.
+Varying time aggregation can be viewed as performing row and column aggregation on the original linear programming (LP) model. Consider the following general linear problem:
+\begin{align}
+\label{eq:LP}
+\min_{x \in \bR^{n}} &c^T x \\ 
+\text{s.t.} &\quad Ax = b \\
+&x \geq 0
+\end{align}
 
+Here, \(A\) is an \(m \times n\) matrix. Now, let \(\rowP = \{\rows_1, \rows_2, \ldots, \rows_{\tilde{n}}\}\) be a partition of \([n]\) (the columns) and \(\colP = \{\cols_1, \cols_2, \ldots, \cols_{\tilde{m}}\}\) a partition of \([m]\) (the rows), corresponding to a partition of the rows and columns of \(A\).
+
+We obtain the corresponding aggregated problem by replacing each set \(\rows\) in \(\rowP\) with a single row, and each set \(R\) in \(\colP\) with a single column. 
+One way to aggregate a set of rows (or columns) is by taking a linear combination of the rows (or columns), known as \emph{weighted aggregation}.
+We denote the weights of the aggregation by \(\rowW_r\) for \(r \in \rowP\), and \(\colW_c\) for \(c \in \colP\).
+The corresponding aggregated LP problem becomes:
+\begin{align}
+\label{eq:LPaggr}
+\min_{\tilde{x} \in \bR^{\tilde{n}}} &\tilde{c}^T \tilde{x} \\ 
+\text{s.t.} &\quad \tilde{A} \tilde{x} = \tilde{b} \\ 
+&\tilde{x} \geq 0 
+\end{align}
+where \(\tilde{A}\) is a \(\tilde{m}\times \tilde{n}\) matrix.
+
+In the problem under consideration, we have various types of constraints: Electricity Balance, Hydrogen Balance, Hydrogen Storage, and bounds on the variables. Given a time partition \(P\), we define \(\rowP\) and \(\colP\) such that each set \(S \in \rowP\) corresponds to all constraints of the same type, scenario, and time index \(t\) that falls within the same time interval in \(T\) as \(P\). Similarly, the variables (such as Power generation, Hydrogen generation, etc.) are partitioned in \(\colP\) based on the same criteria.
+ Rows and columns are combined via weight aggregation. This aggregation maintains the structure of the original problem, 
+meaning that had we formulated the model directly with the aggregated time steps, we would have arrived at the same model.
+Before defining a \emph{structure-preserving aggregation} for a general LP, we introduce some notation: 
+Given a matrix \(B\) with row and column index sets \(I\) and \(J\), respectively, for any subsets \(I' \subset I\) and \(J' \subset J\), 
+we denote the submatrix of \(B\) with rows in \(I'\) and columns in \(J'\) as \(B_{I',J'}\).
+
+Let \(\tilde{A}\) be formed by aggregating the rows and columns of \(A\) according to the partitions \(\rowP\) and \(\colP\), respectively. 
+For each \(R \in \rowP\), we denote by \(\tilde{A}_R\) the row in \(\tilde{A}\) resulting from aggregating the rows of \(A\) corresponding to \(R\), 
+while \(A_R\) refers to the submatrix of \(A\) consisting of all rows in \(R\). 
+Similarly, for each \(C \in \colP\), we define \(\tilde{A}_C\) as the column in \(\tilde{A}\) obtained by aggregating the columns of \(A\) in \(C\), 
+and \(A_C\) as the submatrix of \(A\) containing all columns in \(C\). 
+Thus, \(\rowP\) and \(\colP\) serve as the index sets for \(\tilde{A}\).
+
+For a family of sets \(F\), we denote the subsets of \(F\) with size exactly \(k\) and greater than \(k\) 
+by \(F_{=k}\) and \(F_{>k}\), respectively. 
+Specifically, \(\supp(\tilde{A}_R)_{>1} \subset \colP\) represents the set of indices corresponding to partitions 
+\(C \in \colP\) with size greater than 1, and \(\supp(A_r)_{>1}\) refers to the set of indices where 
+\(c \in C \in \colP\), with \(C\) having a size greater than 1.
+
+\begin{definition}
+
+  \label{def:structure preserving aggregation}
+  Given an LP problem \eqref{eq:LP}, we say that a weighted aggregation with respect to partitions \(\rowP, \colP\) is \emph{structure-preserving} if for each \(R \in \rowP\) and each \(r \in R\), there exists \(f^r: [\tilde{n}] \to [n]\)  such that:
+  \begin{enumerate}
+    \item \label{def:spa bijection}\( f^r|_{\supp(\tilde{A}_{R})}: \supp(\tilde{A}_{R})_{>1} \to \supp(A_{r})_{>1}\) is a bijection such that
+    \[\tilde{A}_{R,C} = A_{r,f^r(C)} \text{ for all } C \in \supp(\tilde{A}_{R})_{>1}\].
+    \item \label{def: spa injection} If \(f^{r'}(C') = f^r(C)\) then \( C=C'\).
+    \item \label{def: spa surjection} \(C = \{f^r(C)\}_{_{r\in R}}\) for all \(R \in \rowP_{>1}\) and \(C \in \colP\). %\(\{f^r(C)\}_{r\in R \in \rowP_{>1}, C \in \colP_{>1}} = \cup_{C \in \colP_{>1}}C\)
+  \end{enumerate}
+\end{definition}
+From condition \ref{def: spa surjection} follows the following:
+\begin{observation}
+  For all \(\{c\}\in \colP_{=1}\) and constraints \(r \in R \in \rowP_{>1}\), \(f^r(\{c\})= c\).
+\end{observation}
+{
+\color{black}
+
+\begin{example}
+
+  As an example, we consider the function \(f^r\) corresponding to the time step aggregation in CEP as defined in \textcolor{green}{\ref{}}. 
+  Let us examine the Power Balance constraints \(r_1\) and \(r_2\) for a fixed node \(n \in \cN\) and time steps \(t_1\) and \(t_2\), 
+  where \(T \coloneqq \{t_1, t_2\} \in P\) represents an interval in the time partition of the aggregated problem. 
+  We note that both \(f^{r_1}\) and \(f^{r_2}\) satisfy the conditions outlined in Definition \ref{def:structure preserving aggregation}. 
+  
+  Condition \ref{def: spa bijection} is met as all aggregated variables, \(EtH_T\), \(HtE_T\), and \(P_{l,T}\), 
+  are mapped (through violet arrows for \(f^{r_1}\) and blue arrows for \(f^{r_2}\)) to unaggregated variables with the same coefficients.  
+  Condition \ref{def: spa surjection} implies that all variables appearing in the two constraints are included in the image of either \(f^{r_1}\) or \(f^{r_2}\). 
+  Finally, Condition \ref{def: spa injectction} holds trivially.
+\newline
+\[
+\begin{tikzpicture}
+  [place/.style={circle,thick},
+  transition/.style={rectangle,draw=black!50,fill=black!20,thick}]
+
+% Nodes for the first two time steps
+\node (t1) at (0, 2) {$ES_{t_1}ns + EW_{t_1}nw - EtH_{t_1,0} + HE_{t_1} + P_{l,t_1} = PL_{t_1}$};
+\node[circle, minimum size=0.6cm] (nst1) at (-2.6, 2) {};
+\node[place] (nwt1) at (-1.2, 2) {};
+\node[place] (EtHt1) at (-0.1,  2) {};
+\node[place] (HtEt1) at (1.1,  2) {};
+\node[circle, minimum size=0.6cm] (Pt1) at (2,  2) {};
+
+
+\node (t2) at (0, 0) {$ES_{t_2}ns + EW_{t_2}nw - EtH_{t_2,0} + HE_{t_2} + P_{l,t_2} = PL_{t_2}$};
+\node[circle, minimum size=0.6cm] (nst2) at (-2.6, 0) {};
+\node[place] (nwt2) at (-1.2, 0) {};
+\node[place] (EtHt2) at (-0.1,  0) {}; 
+\node[place] (HtEt2) at (1.1,  0) {};
+\node[circle, minimum size=0.6cm] (Pt2) at (2,  0) {};
+% Node for the aggregated constraint
+\node (T) at (0, -2) {$(ES_{t_1} + ES_{t_2})ns + (ES_{t_1} + ES_{t_2})nw - EtH_{T} + HtE_{T} + P_{l,T} = PL_{T}$};
+\node[place] (nstT) at (-2.4, -2) {};
+\node[circle, minimum size=0.6cm] (nwtT) at (0.2, -2) {};
+\node[circle, minimum size=0.6cm] (EtHtT) at (1.2, -2) {};
+\node[place] (HtEtT) at (2.2, -2) {};
+\node[place] (PtT) at (3.3, -2) {};
+
+% Arrows from aggregated constraint to time step 1
+\draw[magenta, thick, ->, rounded corners] (nstT) .. controls (-4.5, -1) and (-4.5, 1)  .. node[right, near end] {$\neq$} (nst1);
+\draw[magenta, thick, ->, rounded corners] (nwtT) .. controls (-2.6, -1) and (-2.6, 1)  .. node[right, near end] {$\neq$}(nwt1);
+\draw[violet, thick, ->, rounded corners] (EtHtT) .. controls (0.3, -1) and (-0.1, 1)  .. node[right, near end] {$=$}(EtHt1);
+\draw[violet, thick, ->, rounded corners] (HtEtT) .. controls (2.2, 0) and (1.1, 1)  .. node[right, near end] {$=$}(HtEt1);
+\draw[violet, thick, ->, rounded corners] (PtT) .. controls (4.5, -1) and (4, 0.5)  .. node[right, near end] {$=$}(Pt1);
+% Arrows from aggregated constraint to time step 2
+\draw[cyan, thick, ->, rounded corners] (nstT) .. controls (-2.4, -1.5) and (-2.4, -0.5)  .. node[right] {$\neq$}(nst2);
+\draw[cyan, thick, ->, rounded corners] (nwtT) .. controls (-1, -1) and (-1, -0.3)  .. node[right] {$\neq$} (nwt2);
+\draw[blue, thick, ->, rounded corners] (EtHtT) .. controls (0.3, -1.5) and (-0.1, -0.5)  .. node[right] {$=$} (EtHt2);
+\draw[blue, thick, ->, rounded corners] (HtEtT) .. controls (2.2, -1.5) and (1.1, -0.5)  .. node[right] {$=$}(HtEt2);
+\draw[blue, thick, ->, rounded corners] (PtT) .. controls (3.3, -1.5) and (2.5, -0.5)  .. node[right] {$=$}(Pt2);
+
+% Legends for f^t1 and f^t2
+\node[below right] at (-4.5, 2) {\textcolor{violet}{\Large $f^{r_1}$}};
+\node[below right] at (-3.3, -0.5) {\textcolor{blue}{\Large $f^{r_2}$}};
+
+\end{tikzpicture}
+\]
+\end{example}
+}
+
+% \gr[inline]{
+% Per alcune oss le seguenti condizioni si possono togliere: \(f^{r'}(C') = f^r(C) \implies C=C'\) e \(\{f^r(C)\}_{r\in R \in \rowP_{>1}} = \cup_{C \in \colP_{>1}}C\).
+% Usiamo entrambe le ipotesi aggiuntive più avanti, la prima ci dice che se mandiamo due variabili \(C,C'\) del problema agregato nella stessa variabile, allora le due variabili iniziali sono la stessa. La seconda che a ogni variabili non agregata corrisponde una variabile aggregata.
+% }
+\vspace{0.5cm}
+This implies that the coefficients of the aggregated variables in the aggregated problem match those
+ in the original problem for the corresponding unaggregated variables, \(f^r\) can be seen as a 
+ function mapping the aggregated variables to variables of the same "type" in the unaggregated
+  constraint.
+ While obtaining a feasible solution to \eqref{eq:LP} from \eqref{eq:LPaggr} is not always guaranteed,
+  it is possible under certain assumptions.
+.
+\begin{observation}
+\label{ob:aggrconstr}
+If \((\rowP, \colP)\) is a structure-preserving aggregation, let \(R \in \rowP\) and \(r \in R\). Let \(\tilde{x}\) be a solution
+ to the aggregated problem \eqref{eq:LPaggr}. 
+If \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} \neq 0\), define 
+\[\rho_r \coloneqq \frac{b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}}{\tilde{b}_r
+ - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}}.\]
+  If \(A_{r, \colP_{=1}} = 0\) and \(b_r = 0\) for all \(r \in R\), then \(\rho_r\) can be chosen arbitrarily. 
+
+If \(\rho_r \geq 0\) and \(x \in \bR^n\) satisfies \(x_{\colP_{=1}} = \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} = \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)_{>1}\), then \(x\) satisfies the constraint \(A_r x = b_r\) of the original problem.
+\end{observation}
+
+\begin{proof}
+
+ Consider, \(A_r x = \sum_{i \in \supp(A_r)} A_{r,i} x_i\). 
+  This sum can be divided over the aggregated and unaggregated variables:
+  \begin{equation}
+    \label{eq:p aggr constr 1}
+    A_r x =  A_{r, \colP_{=1}} x_{\colP_{=1}} + \sum_{c \in \supp(A_r)_{>1}}  A_{r, c} x_{c}  .
+  \end{equation}
+  If \(A_{r, \colP_{=1}} = 0\) and \(b_r = 0\) then \( A_{r, \colP_{=1}} x_{\colP_{=1}} = 0\). Fix \(\rho_r \geq 0\), then
+  from the definition of structure-preserving aggregation, we know that \(f^r(\supp(\tilde{A}_R)_{>1}) = \supp(A_r)_{>1}\), so equation \eqref{eq:p aggr constr 1} becomes:
+  \begin{equation}
+    \label{eq:p aggr constr 2}
+    \eqref{eq:p aggr constr 1} = \sum_{S \in \supp(\tilde{A}_R)_{>1}} A_{R, f^r(S)} x_{f^r(S)} =  \sum_{S \in \supp(\tilde{A}_R)_{>1}} \tilde{A}_{R, S} \rho_r \tilde{x}_S  = \rho_r \tilde{A}_R \tilde{x} = 0,
+  \end{equation}
+  where the second equality holds because \(\tilde{A}_{R, S} = A_{r, f^r(S)}\) and \(x_{f^r(S)} = \rho_r \tilde{x}_S\). Thus, \(x\) satisfies the constraint \(A_r x = b_r\).
+  
+  When \(A_{r, \colP_{=1}} \neq 0\) or \(b_r \neq 0\), we proceed similarly:
+  \begin{align}
+  \label{eq:p aggr constr 3}
+ \eqref{eq:p aggr constr 1} &=A_{r, \colP_{=1}} x_{\colP_{=1}} + \sum_{S \in \supp(\tilde{A}_R)_{>1}} A_{r, f^r(S)} x_{f^r(S)}  \\
+  &=  A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}} + \rho_r \sum_{S \in \supp(\tilde{A}_R)_{>1}} \tilde{A}_{R, S}  \tilde{x}_S.
+  \end{align}
+  
+  By the definition of \(\rho_r\) the first sum in the last line of equation \eqref{eq:p aggr constr 3} is equal to:
+  \begin{align*}
+  \rho_r \sum_{S \in \supp(\tilde{A}_R)_{>1}} \tilde{A}_{R, S} \tilde{x}_S 
+  &= \rho_r (\tilde{A}_R \tilde{x} - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}) \\
+  &= \rho_r (\tilde{b}_R - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}) \\
+  &= b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}.
+  \end{align*}
+  
+  Thus, we obtain:
+  \[
+  A_r x = b_r.
+  \]
+  \qed
+  \end{proof}
+
+
+A structure-preserving aggregation does not inherently ensure the feasibility of all constraints in the original problem. However, Observation \ref{ob:aggrconstr} demonstrates how to partially reconstruct a solution \(x\) for a specific constraint \(r\) by scaling the aggregated variables appropriately within the support of \(A_r\).
+
+\begin{definition}
+  Let \(\rho_r\) be defined as in Observation \ref{ob:aggrconstr} for all \(r \in R \in \rowP_{>1}\). Let \(x \in \bR^n\) be defined as \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \colP_{>1}\) and \(r \in R \in \rowP_{>1}\). Then \(x\) is well defined if for all \(r, r' \in R \in \rowP_{>1}\) such that \(f^r(C) = f^{r'}(C)\), we have \(\rho_r = \rho_{r'}\). In such case we refer to \(x\) as a \(rho\)-solution. 
+\end{definition}
+
+If \(x\) is a \(\rho\)-solution.  \(x\) is a feasible solution for the constraints in \(\rowP_{>1}\), we also need to ensure that \(x\) is also feasible for the remaining constraints in \(\rowP_{=1}\).
+
+ 
+
+% \begin{definition}
+%   For a structure-preserving, row and column aggregation \((\rowP,\colP)\).
+%   A constraint \(r \in \colP_{=1}\) is \(\rho\)-agnostic if for all the feasible solution \(\tilde{x}\) of the aggregated problem all \(\rho \in \bR^{\cup_{R \in \rowP_{>1}} R}\) such that 
+%   \(\omega_R^T\rho_R = 1\) for all \(R \in \rowP_{>1}\) then \(x\) defined as in Observation \ref{ob:aggrconstr} is well defined.
+% \end{definition}
+
+\begin{example}
+  Consider the constraint that the initial hydrogen stored must be equal to the final hydrogen stor for a one node network:
+  \begin{equation}
+    \label{eq:examplehydrogen}
+    \sum_{t=1}^n \Delta H_t = 0
+  \end{equation}
+  The corresponding aggregated constraint is for a time partition \(P\) is:
+  \begin{equation}
+    \sum_{T \in P} \Delta H_T = 0
+  \end{equation}
+  For all \(\rho\) such that \(\sum_{t\in T}\rho_t = 1\) for all \(T\) in \(P\), given a feasible solution for the aggregated problem \(\tilde{\Delta H_T}\), let \(\Delta H_t \coloneqq \rho_t \tilde{\Delta H_T}\), then constraint \eqref{eq:examplehydrogen} holds: 
+  \begin{equation}
+    \sum_{t=1}^n \Delta{H_t} = \sum_{t=1}^n \rho_t \tilde{\Delta H_T} = \sum_{T \in P} \sum_{t\in T} \rho_t \tilde{\Delta H_T} = \sum_{T \in P} \tilde{ \Delta H_T} = 0
+  \end{equation}
+  Thus constraint \eqref{eq:examplehydrogen}is holds for \(\rho\)-solutions
+\end{example}
+
+This is a special instance of a general class of constraints that always hold for \(\rho\)-solutions, this follows from the following propriety of \(\rho\)-solutions:
+
+\begin{observation}
+  \label{ob:rhoconvex}
+  Let \(\rowW_r \in \bR\) for all \(r \in R \in \rowP\) be the weights of the row aggregation.
+  If \(x\) is a \(\rho\)-solution, then we have, for all \(R \in \rowP_{>1}\):
+  \begin{equation}
+    \rowW_R^T \rho_R = 1
+  \end{equation}
+\end{observation}
+\begin{proof}
+  \[
+  \rowW_R^T \rho_R = \sum_{r \in R} \rowW_r \rho_r =  \frac{\sum_{r \in R}\rowW_r(b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}})}{\tilde{b}_r
+  - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}} = 1
+  \] 
+\end{proof}
+Note that if \(x\) is a \(\rho\)-solution, then for all \(C \in \supp(A_{r})_{>1}\), we can pick \(R^{(C)} \in \rowP_{>1}\) so that \(C \in \supp(\tilde{A}_{R^{(C)}})\) and \(x_{f^r(C)} = \rho_r \tilde{x}_C\) for all \(r \in R^{(C)}\) and the definition of \(x\) does not depend on the choice of \(R^{(C)}\).
+\begin{observation}
+  Le \((\rowP,\colP)\) be a structure-preserving, row and column aggregation. If \(x\) is a \(\rho\)-solution and \(r\) is a constraint in \(\rowP_{=1}\), such that 
+  \[A_{r,f^{r'}(C)} = \rowW_{r'}\tilde{A}_{r,C} \text{ for all } r' \in R^{(C)},\; C \in \colP_{>1}, \]
+  then \(x\) is a fesible solution for constraint \(r\).
+\end{observation}
+
+\begin{proof}
+As before we split the sum \(A_rx\) over aggregated and unaggregated variables:
+\begin{equation}
+  \label{eq:rho agn eq1}
+  A_rx = \sum_{C \in \colP_{=1}}A_{r,C}x_{C} +  \sum_{C \in \supp(A_{r})_{>1}} \sum_{r' \in R^{(C)}} A_{r,f^{r'}(C)}x_{f^{r'}(C)}
+\end{equation}
+From the hypothesis and the definition of \(\rho\)-solution, we have:
+\begin{equation}
+  \label{eq:rho agn eq2}
+    \eqref{eq:rho agn eq1} =  \sum_{C \in \colP_{=1}}\tilde{A}_{r,C}\tilde{x}_{r,C} +  \sum_{C \in \supp(A_{r})_{>1}} \sum_{r' \in R^{(C)}}\rowW_{r'} \tilde{A}_{r,C}\rho_{r'}\tilde{x}_{C} 
+\end{equation}
+Since \(\rowW_R \rho_R = 1\), we have
+\begin{equation}
+  \label{eq:rho agn eq3}
+    \eqref{eq:rho agn eq2} =   \sum_{C \in \colP_{=1}}\tilde{A}_{r,C}\tilde{x}_{r,C} +  \sum_{C \in \supp(A_{r})_{>1}}\tilde{A}_{r,C}\tilde{x}_{C} = \tilde{A}_r\tilde{x}_r = \tilde{b}_r = b_r
+\end{equation}
+\end{proof}
+
+We now define the hypergraph associated to the aggregation \((\rowP, \colP)\).
+\begin{definition}
+  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the aggregated variables \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in aggregated constraints.
+\end{definition}
+
+When two edges (constraints) in the hypergraph, \(r\) and \(r'\), share aggregated variables, 
+the scaling factors \(\rho_r\) and \(\rho_{r'}\) must be equal for Observation \ref{ob:aggrconstr} to hold for both \(r\) and \(r'\). 
+From this follows the following:
+\begin{proposition}
+\label{prop:xaggfeasible}
+If \((\rowP, \colP)\) is a structure-preserving aggregation and the constraints in \(\rowP_{=1}\) hold for \(rho\)-solutions. Let \(\tilde{x}\) be a solution 
+to the aggregated problem \eqref{eq:LPaggr}. For all \(r \in R \in \rowP_{>1}\) define \(\rho_r\) as in Observation \ref{ob:aggrconstr}. If \(\rho_r \geq 0\) and is constant over the connected components of the hypergraph associated to \((\rowP, \colP)\). 
+Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\) is well defined and thus \(x\) is a \(\rho\)-solution.
+Further more if \(x\) is feasible for all constraints in \(\colP_{=1}\), then \(x\) is feasible solution to the unaggregated problem \eqref{eq:LP}.
+\end{proposition}
+
+Until now we have only considered feasibility, ignoring the relationship between the cost of \(\tilde{x}\) and the cost of \(x\). The following observation gives a condition for the cost of \(\tilde{x}\) to be equal to the cost of \(x\).
+For all \(C \in \colP_{>1}\) let  \(R^{(C)} \in \rowP_{>1}\) be so that \(C \in \supp(\tilde{A}_{R^{(C)}})\) and \(x_{f^r(C)} = \rho_r \tilde{x}_C\) for all \(r \in R^{(C)}\).
+\begin{observation}
+  \label{ob:costpreserving}
+  Let \(x\) be a \(\rho\)-solution. If  \(\rowW_r\tilde{c}_C = c_{f(r,C)}\) for all \(r \in R^{(C)} \in \rowP_{>1}\), then the cost of \(\tilde{x}\) for the aggregated problem 
+  is equal to the cost of \(x\) in the unaggregated problem. 
+\end{observation}
+\begin{proof}
+  Let \(\tilde{x}\) be a solution to the aggregated problem \eqref{eq:LPaggr}. Using observation \ref{ob:rhoconvex}, for all \(C \in \colP_{>1}\) the cost corresponding to the variable \(\tilde{x}_C\) is 
+  \[
+  \tilde{c}_C\tilde{x}_C = \tilde{c}_C(\sum_{r \in R^{(C)}}\rowW_r\rho_r)\tilde{x}_C = \sum_{r \in R^{(C)}}\tilde{c}_C\rowW_r\rho_r\tilde{x}_C  = \sum_{r \in R^{(C)}}c_{f(r,C)}x_{f(r,C)}
+  \]
+  Which corresponds to the cost of the variables \(\{x_{f(r,C)}\}_{r \in R^{(C)}}\). Thus
+  \begin{align*}
+  \tilde{c}\tilde{x} &= \sum_{C \in \colP_{=1}}\tilde{c}_C\tilde{x}_C + \sum_{C \in \colP_{>1}}\tilde{c}_C\tilde{x}_C \\
+                    &= \sum_{C \in \colP_{=1}}c_Cx_C + \sum_{C \in \colP_{>1}}\sum_{r \in R^{(C)}}c_{f(r,C)}x_{f(r,C)} \\
+                    &= \sum_{C \in \colP_{=1}}c_Cx_C + \sum_{j \in \cup_{C \in \colP_{>1}}C}c_{j}x_{j} \\
+                    &= cx
+  \end{align*}
+\qed
+\end{proof}
+
+
+While row aggregation of a linear problem is a relaxation of the original problem, the same does not apply to column aggregation. However, the column aggregation used for the  Capacity Expansion Problem in this work is still a relaxation. In general a column aggregation of a linear problem is a relaxation of the original problem whenever it is a \emph{constant-coefficients column aggregation}, that is:
+\begin{definition}
+  A column aggregation of a linear problem, respect to the column partition \(\colP\), is a \emph{constant-coefficients column aggregation} if, for all \(C \in \colP_{>1}\), the non-zero rows in \(A_C\) are identical.
+\end{definition}
+
+\begin{proposition}
+If \((\rowP,\colP)\) is a structure-preserving, constant-coefficients column aggregation,
+if the hypothesis of proposition \ref{prop:xaggfeasible} and observation \ref{ob:costpreserving} are true, then the aggregated problem \eqref{eq:LPaggr} is exact and \(x\) is an optimal solution.
+\end{proposition}
+
+% \begin{proof}
+   Since for observation \ref{ob:costpreserving}, the cost of the aggregated problem is equal to the cost of \(x\) in the unaggregated problem, we only need that the aggregated problem is a relaxation of the unaggregated problem.
+   But this is true since both row aggregations and constant-coefficients column aggregations are are relaxations.
+%   Let \(x\) be a solution to the unaggregated problem \eqref{eq:LP}. For all \(C \in \colP_{=1}\) let \(\tilde{x}_C \coloneqq x_C\).
+%   Since  \(\{f^r(C)\}_{r \in \cup_{R\in \rowP_{>1}}, C \in \colP} = \cup_{C \in \colP_{>1}}C\), for all \(c \in C \in \colP_{>1}\), exists \(r \in R \in \rowP_{>1}\) and \(C \in \colP_{>1}\) such that \(f^r(C) = c\).
+%   Then let \(\tilde{x}_C \coloneqq \sum_{c \in C}A_{r,c}x_c\). Since if \(f^{r}(C)= f^{r'}(C')\) implies that \(C=C'\), \(x\) is well defined.
+%   Lastly for all \(R \in \rowP\) we have:
+%   \[\tilde{A}_R\tilde{x} = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}\tilde{x}_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \tilde{x}_C \right) = \sum_{r \in R} \left( \sum_{C \in \colP_{=1}}\rowW_rA_{r,c}x_C + \sum_{C\in \supp(\tilde{A}_r)_{>1}} \sum_{c \in C}A_{r,c}x_c \right) = \sum_{r \in R} \tilde{\rho_r} b_r = \tilde{b}_R 
+%   \]
+%   \qed
+% \end{proof}
 
 
 
